[gd_scene load_steps=13 format=3 uid="uid://crwehviweekcw"]

[ext_resource type="Script" path="res://tl.gd" id="1_k0f0i"]
[ext_resource type="Texture2D" uid="uid://b78ah5usgeirf" path="res://icons/frame_+.png" id="2_07ktf"]
[ext_resource type="PackedScene" uid="uid://6t1uh0nt55do" path="res://c_scroll_bar.tscn" id="2_j8upp"]
[ext_resource type="FontFile" uid="uid://dyfftw43h1bkw" path="res://Font/ENSADLED-Regular.otf" id="2_v1722"]
[ext_resource type="Script" path="res://add_frame.gd" id="3_fmj6v"]
[ext_resource type="Shader" path="res://add_frame_button_shader.gdshader" id="4_elsjm"]

[sub_resource type="LabelSettings" id="LabelSettings_0txd2"]
font = ExtResource("2_v1722")
font_color = Color(0.772549, 0.227451, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2e5kt"]
font = ExtResource("2_v1722")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h4p2f"]
shader = ExtResource("4_elsjm")
shader_parameter/theme_color = Vector3(1, 0, 0)
shader_parameter/line_thinckness = 0.01
shader_parameter/aspect_ratio = 1.0
shader_parameter/cross_size = 0.1
shader_parameter/color_ratio = 0.4

[sub_resource type="InputEventKey" id="InputEventKey_wcd57"]
device = -1
shift_pressed = true
keycode = 61
unicode = 61

[sub_resource type="InputEventKey" id="InputEventKey_qdsab"]
device = -1
keycode = 61
unicode = 61

[sub_resource type="Shortcut" id="Shortcut_yxk68"]
events = [SubResource("InputEventKey_wcd57"), SubResource("InputEventKey_qdsab")]

[node name="TL" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_k0f0i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "FRAMES"
label_settings = SubResource("LabelSettings_0txd2")
vertical_alignment = 2

[node name="ClearLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 8
text = "CLEAR    "
label_settings = SubResource("LabelSettings_2e5kt")
vertical_alignment = 2

[node name="clear_button" type="Button" parent="VBoxContainer/HBoxContainer2/ClearLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="c_scroll_bar" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_j8upp")]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_horizontal = 1
size_flags_stretch_ratio = 0.03

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_custom_step = 0.0
scroll_vertical_custom_step = 0.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 5

[node name="add_frame" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/MarginContainer/GridContainer"]
material = SubResource("ShaderMaterial_h4p2f")
custom_minimum_size = Vector2(220, 242)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
shortcut = SubResource("Shortcut_yxk68")
icon = ExtResource("2_07ktf")
flat = true
expand_icon = true
script = ExtResource("3_fmj6v")

[connection signal="resized" from="VBoxContainer" to="." method="_on_v_box_container_resized"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer2/ClearLabel/clear_button" to="." method="_on_clear_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer2/ClearLabel/clear_button" to="." method="_on_clear_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ClearLabel/clear_button" to="." method="_on_clear_button_pressed"]
[connection signal="position_changed" from="VBoxContainer/HBoxContainer/c_scroll_bar" to="." method="_on_c_scroll_bar_position_changed"]
[connection signal="resized" from="VBoxContainer/HBoxContainer/ScrollContainer/MarginContainer/GridContainer" to="." method="_on_grid_container_resized"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/ScrollContainer/MarginContainer/GridContainer/add_frame" to="VBoxContainer/HBoxContainer/ScrollContainer/MarginContainer/GridContainer/add_frame" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/ScrollContainer/MarginContainer/GridContainer/add_frame" to="VBoxContainer/HBoxContainer/ScrollContainer/MarginContainer/GridContainer/add_frame" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/MarginContainer/GridContainer/add_frame" to="." method="_on_add_frame_pressed"]
